# project

./: README.md  pyproject.toml
src/: processing.py  widget.py
